# Penumbra

./: .env.local.example  .gitignore  .mcp.json  Cargo.toml  PROGRESS.md  README.md  drizzle.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml  release.yml
apps/api/: .env.local.example  package.json  tsconfig.json
apps/api/src/: context.ts  ledger.test.ts  ledger.ts  lichessOAuth.test.ts  lichessOAuth.ts  schemas.ts  server.test.ts  server.ts
apps/api/src/plugins/: auth.ts  rateLimit.ts
apps/api/src/routes/: bff.ts  fog.ts  games.ts  ledger.ts  meta.ts  positions.ts  proofs.ts
apps/web/: .env.local.example  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  (+2 more)
apps/web/tests/: fog-roundtrip.spec.ts  journey.spec.ts  proofs.spec.ts  routes.spec.ts
docs/: CERTIFICATE_FORMAT.md  DEVELOPMENT.md  ENGINES.md  FOG_INDEX_METHODOLOGY.md  ROADMAP.md  gpl-compliance.md
infra/: docker-compose.yml
rust/prover/: Cargo.toml  README.md
rust/prover/examples/: morphy_mate_in_2.pnbcert  two_rook_mate_in_2.pnbcert
rust/prover/examples/fortress/: README.md  tierA_kpk_dead_draw.pnbcert  tierA_stalemate_at_root.pnbcert  tierA_vancura_krpvkr.pnbcert  tierA_wrong_bishop_rook_pawn.pnbcert  tierB_ocb_blockade_1.pnbcert  tierB_ocb_blockade_2.pnbcert  tierB_triple_pawn_liquidation.pnbcert  tierC_opposite_corners.pnbcert  tierC_quad_pawn_fortress.pnbcert  tierC_triple_pawn_fortress.pnbcert
rust/prover/src/: certificate.rs  container.rs  lib.rs  main.rs  pns.rs  tb.rs  time.rs
rust/prover/tests/: fortress_roundtrip.rs  prove_and_verify.rs
rust/verifier/: Cargo.toml  README.md
rust/verifier/src/: container.rs  error.rs  hash.rs  lib.rs  main.rs  semantic.rs  tb.rs  tb_endpoint.rs  verifier.rs
rust/verifier/tests/: hash_vectors.rs  verify_certificates.rs  zobrist_vectors.rs
rust/verifier/tests/golden/: backrank_mate_in_1.json  kpvk_fortress_draw.json  kqpk.json
rust/verifier/tests/mutations/: cycle_in_win.json  fake_checkmate_terminal.json  illegal_uci.json  missing_and_branch.json  missing_child_node.json  tablebase_value_flip.json  wrong_node_zobrist.json
scripts/: db-smoke.mjs  fetch-engines.mjs  fetch-syzygy.mjs  publish-proofs.mjs  seed-dev-api-key.mjs  verify-ledger.mjs
services/analysis/: package.json
services/analysis/src/: cli.ts  fingerprint.test.ts  fingerprint.ts  index.ts
services/analysis/test-fixtures/: endgame-proof-entry.pgn  game-castling-promotion-ep.pgn  lc0-transcript.txt  lichess-games.ndjson  stockfish-transcript.txt
(+55 files in other folders)
