[workspace]
members = ["rust/verifier", "rust/prover"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Srikaanth"]
edition = "2021"

[workspace.dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
