[package]
name = "penumbra-prover"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Penumbra proof-number search prover"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
shakmaty = "0.26"
