[package]
name = "penumbra-verify"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Penumbra certificate verifier CLI"

[[bin]]
name = "penumbra-verify"
path = "src/main.rs"

[lib]
name = "penumbra_verify"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
shakmaty = "0.26"
zstd = "0.13"
sha2 = "0.10"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
